# llm_emulator

./: .gitignore  README.md  main.py  pyproject.toml
llm_emulator/: __init__.py  events.py  exceptions.py
llm_emulator/core/: config.py  connection.py  emulator.py
llm_emulator/core/protocols/: discovery.py  handler.py  service.py
llm_emulator/llm/: base.py  litellm_gateway.py  roles.py
llm_emulator/llm/mocks/: mock_gateway.py  simple_mock_gateway.py
llm_emulator/utils/: hooks.py  logger.py  subscribers.py
